syntax = "proto3";
package tendermint.services.block.v1;

option go_package = "github.com/cometbft/cometbft/proto/tendermint/services/block/v1";

message GetBlockRequest {
  int64 height   = 1; // the height of the block requested
}

message GetBlockResponse {
  int64 height   = 1;  // the height of the block
}
